<resources>
    <string name="app_name">meteoapp</string>

    //Bottom Nav Strings
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="oggi">oggi</string>
    <string name="domani">domani</string>
    <string name="cerca">cerca</string>

    //Bottom Nav Strings

    <string name="Home">Home</string>
    <string name="Oggi">Oggi</string>
    <string name="Domani">Domani,</string>
    <string name="Cerca">Cerca</string>
    <string name="city_region">$city, $region</string>
    <string name="day_date"><b>Domenica 10 Settembre</b></string>
    <string name="today_hour">%d:00</string>
    <string name="tvTodayMaxTemp"><b>%d°</b></string>
    <string name="tvTodayMaxHumidity">%d%%</string>
    <string name="today_icon">Today Icon</string>
    <string name="perceived">Percepita</string>
    <string name="todayPerceivedTemperature"><b>45°</b></string>
    <string name="uv_index">Indice UV</string>
    <string name="index_value"><b>%d/10</b></string>
    <string name="humidity">Umidità</string>
    <string name="humidityValue"><b>%d%%</b></string>
    <string name="wind">Vento</string>
    <string name="windValue"><b>SSE 7km/h</b></string>
    <string name="coverage">Copertura</string>
    <string name="rain">Pioggia</string>
    <string name="rainValue"><b>0 cm</b></string>
    <string name="coverageValue"><b>24%</b></string>


    //Title Strings
    <string name="palermo">Palermo,</string>
    <string name="luned_11_settembre">Lunedì 11 Settembre</string>

    <string name="sicilia">Sicilia</string>
    <string name="sereno">Sereno</string>


    //Row+Card Strings
    <string name="water_drop">water drop</string>
    <string name="percepita">Percepita</string>
    <string name="indice_uv">Indice UV</string>
    <string name="umidit">Umidità</string>
    <string name="vento">Vento</string>
    <string name="nne_1km_h">NNE 1km/h</string>
    <string name="copertura">Copertura</string>
    <string name="pioggia">Pioggia</string>
    <string name="tvTodayPercentage"><b>0%</b></string>

    //Textview Tomorrow Strings
    <string name="tv_time">%02d:00</string>
    <string name="tv_temperature">%d°</string>
    <string name="tv_percentage">%d%%</string>
    <string name="tv_rain">%dcm</string>
    <string name="tv_UV_index">%d/10</string>
    <string name="tv_kmh">%dkm/h</string>


    <string name="recent_search">Ricerche recenti</string>
    <string name="Tomorrow">Domani</string>
    <string name="Today">Oggi</string>
    <string name="Today2">Oggi,</string>


    //Home Cards
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="precip">precip.</string>
    <string name="vento_home">vento</string>
    <string name="next5days">PROSSIMI 5 GIORNI</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>


</resources>