<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="13dp"
    android:background="@color/color_background">

    <ImageView
        android:id="@+id/ivTodayIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="102dp"
        android:contentDescription="@string/today_icon"
        tools:srcCompat="@drawable/sun_icon" />

    <TextView
        android:id="@+id/tvTodayHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/today_hour"
        android:textColor="@color/color_title"
        android:textSize="@dimen/subtitle_textSize_2_3screen"/>



    <TextView
        android:id="@+id/tvTodayTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:text="@string/tvTodayMaxTemp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_temperature_percentage_2_3screen"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/iv_water_drop"
        app:srcCompat="@drawable/water_drop"
        android:layout_width="20dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="253dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/water_drop" />

    <TextView
        android:id="@+id/tvTodayHumidity"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="275dp"
        android:layout_marginTop="3dp"
        android:text="@string/tvTodayMaxHumidity"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="24dp"
        android:background="@color/color_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expanded_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="42dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvTodayCard"
        android:layout_width="342dp"
        android:layout_height="@dimen/card_height_2_3screen"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:elevation="15dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvPerceivedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/perceived"
                android:textColor="@color/black"
                android:textSize="@dimen/card_text_description" />

            <TextView
                android:id="@+id/tvPerceivedTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="37dp"
                android:text="@string/todayPerceivedTemperature"
                android:textColor="@color/black"
                android:textSize="@dimen/card_text_description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIndexTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="198dp"
                android:layout_marginTop="18dp"
                android:text="@string/uv_index"
                android:textColor="@color/black"
                android:textSize="@dimen/card_text_description" />

            <TextView
                android:id="@+id/tvIndexValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="198dp"
                android:layout_marginTop="37dp"
                android:textColor="@color/black"
                android:textSize="@dimen/card_text_description"
                android:textStyle="bold"
                tools:text="@string/index_value" />

            <View
                android:id="@+id/cv_first_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="20dp"
                android:background="@color/color_view" />


            <TextView
                android:id="@+id/tvhumidityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="84dp"
                android:text="@string/humidity"
                android:textColor="@color/black"
                android:textSize="@dimen/card_text_description" />

            <TextView
                android:id="@+id/tvHumidityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="106dp"
                android:textColor="@color/black"
                android:textSize="@dimen/card_text_description"
                android:textStyle="bold"
                tools:text="@string/humidityValue" />

            <TextView
                android:id="@+id/tvWindTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="198dp"
                android:layout_marginTop="84dp"
                android:text="@string/wind"
                android:textColor="@color/black"
                android:textSize="@dimen/card_text_description" />

            <TextView
                android:id="@+id/tvWindValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="198dp"
                android:layout_marginTop="106dp"
                android:textColor="@color/black"
                android:textSize="@dimen/card_text_description"
                android:textStyle="bold"
                tools:text="@string/windValue" />

            <View
                android:id="@+id/cv_second_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="139dp"
                android:layout_marginRight="20dp"
                android:background="@color/color_view" />

            <TextView
                android:id="@+id/tvCoverageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="153dp"
                android:text="@string/coverage"
                android:textColor="@color/black"
                android:textSize="@dimen/card_text_description" />

            <TextView
                android:id="@+id/tvCoverageValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="175dp"
                android:textColor="@color/black"
                android:textSize="@dimen/card_text_description"
                android:textStyle="bold"
                tools:text="@string/coverageValue" />

            <TextView
                android:id="@+id/tvRainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="153dp"
                android:text="@string/rain"
                android:textColor="@color/black"
                android:textSize="@dimen/card_text_description" />

            <TextView
                android:id="@+id/tvRainValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="198dp"
                android:layout_marginTop="175dp"
                android:textColor="@color/black"
                android:textSize="@dimen/card_text_description"
                android:textStyle="bold"
                tools:text="@string/rainValue" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>