<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/color_background"
    android:id="@+id/relativeLayout2">

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:textColor="@color/text_today_screen"
        android:text="@string/palermo"
        android:textSize="@dimen/subtitle_textSize_2_3screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_title"
        android:text="@string/sicilia"
        android:textSize="@dimen/subtitle_textSize_2_3screen"
        app:layout_constraintTop_toTopOf="@id/city"
        app:layout_constraintStart_toEndOf="@id/city" />



    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luned_11_settembre"
        android:textColor="@color/color_title"
        android:textSize="@dimen/title_textSize_2_3screen"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tomorrow"
        app:layout_constraintTop_toBottomOf="@id/tomorrow"/>


    <TextView
        android:id="@+id/tomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Domani"
        android:textColor="@color/color_title"
        android:textSize="@dimen/title_textSize_2_3screen"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/city"
        app:layout_constraintStart_toStartOf="@id/city" />

</androidx.constraintlayout.widget.ConstraintLayout>